[gd_scene load_steps=2 format=3 uid="uid://d1x5lpjo6c8km"]

[ext_resource type="Script" uid="uid://bgno687eqyx36" path="res://HttpClientUI.gd" id="1_0773g"]

[node name="HttpClientUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0773g")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxRequest" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MethodSelect" type="OptionButton" parent="VBoxContainer/HBoxRequest"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 1
popup/item_0/text = "GET"
popup/item_0/id = 0

[node name="URLInput" type="LineEdit" parent="VBoxContainer/HBoxRequest"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "http://ip_address:port/path"

[node name="SendButton" type="Button" parent="VBoxContainer/HBoxRequest"]
layout_mode = 2
text = "Send"

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="Headers" type="Control" parent="VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/TabContainer/Headers"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
placeholder_text = "Key: Value (e.g., Cookie: session=abc)"

[node name="Body" type="Control" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/TabContainer/Body"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
placeholder_text = "Request Body Content (for POST)"

[node name="Response" type="Control" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/TabContainer/Response"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
placeholder_text = "Server Response will appear here.."
